--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@fullpage/react-fullpage": "^0.1.13",
     "fullpage-react": "^3.1.0",
     "gatsby": "^2.3.5",
+    "gatsby-cli": "^2.5.7",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-manifest": "^2.0.26",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.1",
     "gatsby-plugin-react-helmet": "^3.0.11",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-sharp": "^2.1.17",
